k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DEPI-app
  namespace: DEPI
spec:
  replicas: 3
  selector:
    matchLabels:
      app: DEPI-app
  template:
    metadata:
      labels:
        app: DEPI-app
    spec:
      containers:
        - name: DEPI-app
          image: 183631347882.dkr.ecr.us-east-1.amazonaws.com/DEPI-app:4
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
