k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: DEPI-app-service
  namespace: DEPI
spec:
  type: ClusterIP
  selector:
    app: DEPI-app
  ports:
    - port: 80
      targetPort: 5000
